--- a/src/index.css
+++ b/src/index.css
@@ -379,128 +379,6 @@ main {
     padding-left: 3rem;
 }
 
-@media (max-width:991px) {
-    .main {
-        padding: 25px 50px;
-    }
-
-    .header {
-        padding: 15px 15px;
-    }
-
-    .mobile-nav-toggle,
-    .mobile-search-toggle {
-        display: block;
-        transition: all 0.3s ease-in-out;
-    }
-
-    .navbar ul {
-        display: none;
-    }
-
-    .search-container {
-        display: none;
-    }
-
-    .mobile-nav {
-        position: fixed;
-        top: 70px;
-        right: 0;
-        background-color: #000;
-        width: 100%;
-        text-align: center;
-        z-index: 999;
-        height: 100%;
-    }
-
-    .mobile-nav ul {
-        padding: 0;
-        list-style: none;
-        border-top: 1px solid #666;
-    }
-
-    .mobile-nav li {
-        display: block;
-        padding: 1rem 0;
-        border-bottom: 1px solid #666;
-    }
-
-    .mobile-nav a {
-        display: block;
-        padding: 10px 20px;
-        color: #333;
-        text-decoration: none;
-    }
-
-    .mobile-nav .active {
-        color: #f5c518 !important;
-        font-weight: bold;
-    }
-
-    .mobile-nav-show {
-        display: block;
-    }
-
-    .mobile-search-show {
-        display: block;
-    }
-
-    .hero {
-        height: 775px;
-    }
-
-    .hero-text {
-        padding: 0 20px;
-    }
-
-    .carousel-control-prev,
-    .carousel-control-next {
-        display: none !important;
-    }
-
-    .card-body {
-        margin: 1rem 0;
-    }
-
-    .card-container::after {
-        width: 100px;
-        height: 280px;
-        right: 49px;
-    }
-    .non-hero-page-main {
-        margin: 90px 0;
-    }
-    .poster {
-        width: 100%;
-        height: 100%;
-    }
-    #movie-details .content {
-        padding: 0;
-        margin-top: 1.5rem;
-    }
-}
-
-@media only screen and (max-width:768px) {
-    .hero-text h1 {
-        font-size: 3rem
-    }
-
-    .hero-text h4 {
-        font-size: 1.2rem
-    }
-}
-
-@media only screen and (max-width:480px) {
-    .hero-text h1 {
-        font-size: 2.5rem;
-        width: 20rem
-    }
-
-    .hero-text h4 {
-        font-size: 1rem
-    }
-}
-
 .form-select {
     background-color: transparent !important;
     color: #fff !important;
@@ -734,4 +612,130 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media (max-width:991px) {
+    .main {
+        padding: 25px 50px;
+    }
+
+    .header {
+        padding: 15px 35px;
+    }
+
+    .mobile-nav-toggle,
+    .mobile-search-toggle {
+        display: block;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .navbar ul {
+        display: none;
+    }
+
+    .search-container {
+        display: none;
+    }
+
+    .mobile-nav {
+        position: fixed;
+        top: 70px;
+        right: 0;
+        background-color: #000;
+        width: 100%;
+        text-align: center;
+        z-index: 999;
+        height: 100%;
+    }
+
+    .mobile-nav ul {
+        padding: 0;
+        list-style: none;
+        border-top: 1px solid #666;
+    }
+
+    .mobile-nav li {
+        display: block;
+        padding: 1rem 0;
+        border-bottom: 1px solid #666;
+    }
+
+    .mobile-nav a {
+        display: block;
+        padding: 10px 20px;
+        color: #333;
+        text-decoration: none;
+    }
+
+    .mobile-nav .active {
+        color: #f5c518 !important;
+        font-weight: bold;
+    }
+
+    .mobile-nav-show {
+        display: block;
+    }
+
+    .mobile-search-show {
+        display: block;
+    }
+
+    .hero {
+        margin: 25px 50px;
+    }
+
+    .hero-text {
+        padding: 0 20px;
+    }
+
+    .carousel-control-prev,
+    .carousel-control-next {
+        display: none !important;
+    }
+
+    .card-body {
+        margin: 1rem 0;
+    }
+
+    .card-container::after {
+        width: 100px;
+        height: 280px;
+        right: 49px;
+    }
+    .non-hero-page-main {
+        margin: 90px 0;
+    }
+    .poster {
+        width: 100%;
+        height: 100%;
+    }
+    #movie-details .content {
+        padding: 0;
+        margin-top: 1.5rem;
+    }
+    .form-select {
+        margin: auto;
+        width: 220.98px !important;
+    }
+}
+
+@media only screen and (max-width:768px) {
+    .hero-text h1 {
+        font-size: 3rem
+    }
+
+    .hero-text h4 {
+        font-size: 1.2rem
+    }
+}
+
+@media only screen and (max-width:480px) {
+    .hero-text h1 {
+        font-size: 2.5rem;
+        width: 20rem
+    }
+
+    .hero-text h4 {
+        font-size: 1rem
+    }
 }
