--- a/src/index.css
+++ b/src/index.css
@@ -627,9 +627,9 @@ main {
 
     .mobile-nav {
         position: fixed;
-        top: 70px;
+        top: 130px;
         right: 0;
-        background-color: #000;
+        background-color: #1a1a1a;
         width: 100%;
         text-align: center;
         z-index: 999;
